--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -2,7 +2,7 @@ name: CI/CD Dev Trigger
 
 on:
   issues:
-    types: [opened, edited, labeled]
+    types: [labeled]
 
 permissions:
   issues: write
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   trigger-cicd:
-    if: contains(github.event.issue.labels.*.name, 'cicd-dev')
+    if: github.event.label.name == 'cicd-dev'
     uses: intartif/demos-agent-skills/.github/workflows/react-cicd.yml@master
     with:
       branch: ${{ github.event.issue.body | fromJson | get('branch', '') }}
